# ODB2VTK

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: python-black-formatter.yml  style-checks.yml
cpp/: CMakeLists.txt  main.cpp  odb2vtk.cpp  odb2vtk.h
cpp/cmake/: FindAbqSDK.cmake
cpp/odb2vtk/: odb2vtk.sln
cpp/odb2vtk/odb2vtk/: main.cpp  odb2vtk.cpp  odb2vtk.h  odb2vtk.vcxproj  odb2vtk.vcxproj.filters
doc/: 2d_planar.json  2d_planar.odb  Job-1.json  Job-1.odb  axisymmetric.odb
doc/2d_planar/: Step-1_0.vtu  Step-1_1.vtu
doc/Job-1/: Job-1.pvd  Step-1_1.vtu
doc/Job-1a/: Job-1a.pvd  Step-1_0.vtu
python/: multiprocess.py  odb2vtk.py  utilities.py
src/: multiprocess.py  odb2vtk.py  utilities.py
